Fix list alignment issues on homepage

--- a/src/_includes/assets/css/typography.css
+++ b/src/_includes/assets/css/typography.css
@@ -40,12 +40,12 @@
   margin-top: 1.25rem;
 }
 
-.prose ul {
+.article .prose ul {
   list-style: disc;
   padding-left: 1rem;
 }
 
-.prose ol {
+.article .prose ol {
   padding-left: 1.5rem;
 }
 
